# gamelib-mcp

./: .env.example  .env.local.example  CLAUDE.md  Caddyfile  Dockerfile  LOCAL_DOCKER.md  deploy.md  docker-compose.yml  pyproject.toml  test.py
docs/plans/: 2026-03-27-epic-gog-data-modules.md  2026-03-27-nintendo-data-module.md  2026-03-27-psn-data-module.md  2026-03-27-tool-changes.md  2026-04-08-schema-audit-remediation.md
docs/superpowers/plans/: 2026-04-05-platform-enrichment.md  2026-04-07-controlled-parallel-sync-and-enrichment.md  2026-04-07-local-sync-investigation.md  2026-04-07-startup-sync-and-igdb-rate-limit.md
gamelib_mcp/: main.py  migrate.py  setup_platform.py  utils.py
gamelib_mcp/data/: backloggd.py  db.py  enrich_bg.py  epic.py  gog.py  hltb.py  igdb.py  metacritic.py  nintendo.py  opencritic.py  psn.py  steam_reviews.py  steam_store.py  steam_xml.py  title_normalization.py
gamelib_mcp/integrations/: inspectors.py  status.py
gamelib_mcp/tools/: admin.py  detail.py  discover.py  integrations.py  library.py  platforms.py  ratings.py
scripts/: mcp-local-inspector
steam_mcp/: main.py  migrate.py
steam_mcp/data/: db.py  epic.py  gog.py  nintendo.py
steam_mcp/tools/: admin.py  library.py
tests/: test_db_migration.py  test_enrich_bg.py  test_epic.py  test_gog.py  test_hltb.py  test_igdb.py  test_igdb_metacritic.py  test_integrations_http.py  test_integrations_status.py  test_integrations_tools.py  test_nintendo.py  test_opencritic.py  test_psn.py  test_startup_sync.py  test_steam_store.py  test_steam_xml.py  test_title_normalization.py
(+6 files in other folders)
