[project]
name = "gamelib-mcp"
version = "0.1.0"
description = "Steam Library MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0,<4.0",
    "httpx>=0.27",
    "howlongtobeatpy>=1.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.0",
    "psnawp>=2.1,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gamelib_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
